# seasonal-dir-template

./: pyproject.toml
draft/: notes.md
paused/: notes.md
unsorted/: notes.md
wip/: notes.md
